Implement add device functionality

--- a/src/index.html
+++ b/src/index.html
@@ -36,22 +36,7 @@
             <button id="sort_manufacturer" class="na-button na-button-green">Sort By Manufacturer</button>
         </div>
     </div>
-    <div id="list_frame" class="frame">
-        <span>RDM Device List (${FILTER_VISIBLE_COUNT}/${DEVICE_COUNT} | ${FILTER_MODE} | ${SORT_MODE})</span>
-        <div id="rdm_device_list">
-            <table class="na-table" style="width: 100%;">
-                <tr class="rdm-list-header na-table-header">
-                    <th style="min-width: 1rem; max-width: 1rem;"></th>
-                    <th style="min-width: 6rem; max-width: 6rem;">UID</th>
-                    <th style="min-width: 12rem;">LABEL</th>
-                    <th style="min-width: 8rem;">MANUFACTURER</th>
-                    <th style="min-width: 12rem;">MODEL</th>
-                    <th style="min-width: 12rem;">MODE</th>
-                    <th style="min-width: 6rem;">ADDRESS</th>
-                </tr>
-            </table>
-        </div>
-    </div>
+    <div id="list_frame" class="frame"></div>
 </body>
 
 </html>
